Go JDK10+